Step 2.2: Cannot get the Json, created the recycler View (with no data retrieved so it might bug)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,7 @@
     <string name="game_name">Tic Tac Toe</string>
     <string name="button_start">Start!</string>
     <string name="text_made">Made at:</string>
+    <string name="date_result">date</string>
+    <string name="name_result">Name</string>
+    <string name="todo">TODO</string>
 </resources>
